[dmp] Config gc log, jmx